Project ouratlas {
  database_type: "PostgreSQL"
  note: "AI-native map, collection, project, and itinerary planning app"
}

Table users {
  id uuid [pk]
  email varchar [unique]
  display_name varchar
  avatar_url text
  auth_provider varchar
  location varchar
  created_at timestamptz
  updated_at timestamptz
}

Table places {
  id uuid [pk]
  created_by uuid [ref: > users.id]
  name varchar
  subtitle varchar
  description text
  ai_summary text
  category varchar
  tags text[]
  address text
  city varchar
  region varchar
  country varchar
  latitude decimal
  longitude decimal
  location geography
  external_place_id varchar
  external_source varchar
  visibility varchar
  created_at timestamptz
  updated_at timestamptz
}

Table place_sources {
  id uuid [pk]
  place_id uuid [ref: > places.id]
  user_id uuid [ref: > users.id]
  source_type varchar
  source_url text
  raw_text text
  screenshot_url text
  ai_extracted_summary text
  created_at timestamptz
}

Table atlas {
  id uuid [pk]
  owner_id uuid [ref: > users.id]
  title varchar
  description text
  visibility varchar
  created_at timestamptz
  updated_at timestamptz
}

Table atlas_places {
  id uuid [pk]
  atlas_id uuid [ref: > atlas.id]
  place_id uuid [ref: > places.id]
  added_by uuid [ref: > users.id]
  note text
  sort_order int
  created_at timestamptz
}

Table plans {
  id uuid [pk]
  owner_id uuid [ref: > users.id, note: 'legacy, unused by RLS']
  user_id uuid [note: 'RLS ownership column, default auth.uid(), mirrors places.user_id / atlas.user_id']
  title varchar
  destination varchar
  start_date date
  end_date date
  description text
  visibility varchar
  image_url text
  created_at timestamptz
  updated_at timestamptz
}

Table plan_members {
  id uuid [pk]
  plan_id uuid [ref: > plans.id]
  user_id uuid [ref: > users.id]
  role varchar
  created_at timestamptz
}

// A place may appear more than once in the same plan — no unique(plan_id, place_id).
// Ownership for RLS is proven via the parent plans.user_id, not a column here.
Table plan_itinerary_place_flexible {
  id uuid [pk]
  plan_id uuid [ref: > plans.id]
  place_id uuid [ref: > places.id]
  added_by uuid [ref: > users.id]
  status varchar
  note text
  created_at timestamptz
}

// Ownership for RLS is proven via the parent plans.user_id, not a column here.
Table plan_itinerary_days {
  id uuid [pk]
  plan_id uuid [ref: > plans.id]
  date date
  title varchar
  sort_order int
  created_at timestamptz
}

// sort_order is scoped within (itinerary_day_id, visit_slot), not just the day.
// Ownership for RLS is proven via itinerary_day_id -> plan_itinerary_days.plan_id -> plans.user_id.
Table plan_itinerary_places {
  id uuid [pk]
  itinerary_day_id uuid [ref: > plan_itinerary_days.id]
  place_id uuid [ref: > places.id]
  visit_slot varchar
  note text
  sort_order int
  created_at timestamptz
}

Table imports {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  plan_id uuid [ref: > plans.id]
  atlas_id uuid [ref: > atlas.id]
  input_type varchar
  input_url text
  input_text text
  file_url text
  status varchar
  metadata jsonb
  created_at timestamptz
  updated_at timestamptz
}

Table extracted_places {
  id uuid [pk]
  import_id uuid [ref: > imports.id]
  name varchar
  address text
  city varchar
  country varchar
  latitude decimal
  longitude decimal
  location geography
  ai_summary text
  confidence decimal
  status varchar
  created_at timestamptz
}

Table chat_sessions {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  plan_id uuid [ref: > plans.id]
  title varchar
  created_at timestamptz
  updated_at timestamptz
}

Table chat_messages {
  id uuid [pk]
  chat_session_id uuid [ref: > chat_sessions.id]
  sender_type varchar
  content text
  extracted_places jsonb
  metadata jsonb
  created_at timestamptz
}

Table user_place_interactions {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  place_id uuid [ref: > places.id]
  interaction_type varchar
  created_at timestamptz
}